[gd_scene load_steps=4 format=3 uid="uid://duaxwuvy8eoji"]

[ext_resource type="Script" uid="uid://c0m80fnhfdte6" path="res://tunnel.gd" id="1_00owb"]
[ext_resource type="Texture2D" uid="uid://dc6ld8vesdqat" path="res://assets/tilemaps/offroad_tunnel.png" id="1_firpc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00owb"]
size = Vector2(8, 8)

[node name="Tunnel" type="Node2D"]
script = ExtResource("1_00owb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_00owb")

[node name="SpritePivot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpritePivot" groups=["tunnel"]]
texture = ExtResource("1_firpc")
hframes = 2
vframes = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
